<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        tools:context=".ui.home.profile.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/no_user_photo"
            android:layout_marginTop="30dp"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lateral_margin"
            android:layout_marginEnd="@dimen/lateral_margin"
            android:layout_marginTop="10dp">
        <com.gimlet.edittextform.EditTextForm
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/name"
                android:inputType="none"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lateral_margin"
            android:layout_marginEnd="@dimen/lateral_margin"
            android:layout_marginTop="10dp">
        <com.gimlet.edittextform.EditTextForm
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/lastname"
                android:inputType="none"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lateral_margin"
            android:layout_marginEnd="@dimen/lateral_margin"
            android:layout_marginTop="10dp">
        <com.gimlet.edittextform.EditTextForm
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:hint="@string/email"
                android:inputType="none"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"/>

    <ProgressBar
            android:id="@+id/progressbarProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

</LinearLayout>