<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layoutLogIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.log_in.LogInActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/login_image"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilEmailContainer"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmailContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lateral_margin"
            android:layout_marginEnd="@dimen/lateral_margin"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilPasswordContainer">
        <com.gimlet.edittextform.EditTextForm
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPasswordContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lateral_margin"
            android:layout_marginEnd="@dimen/lateral_margin"
            android:layout_marginBottom="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnLogIn">
        <com.gimlet.edittextform.EditTextForm
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnLogIn"
            style="@style/BigButtonDisabled"
            android:layout_width="0dp"
            android:layout_height="@dimen/big_button_height"
            android:text="@string/log_in"
            android:onClick="onLogInButtonClicked"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
            android:id="@+id/progressBarLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>